--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,9 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        }, "files" : [
+            "App/Helpers/meals.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
